--- a/2.变量和数据类型/变量和数据类型.md
+++ b/2.变量和数据类型/变量和数据类型.md
@@ -36,12 +36,12 @@ Java 基本类型的内存占用情况如下（用一个空格表示 1byte）：
 
 ```java
 int i1 = 2147483647;
-        int i2 = -2147483648;
-        int i3 = 2_000_000_000; // 加下划线更容易识别
-        System.out.println(i3);
-        int i4 = 0xff0000; // 十六进制表示的16711680
-        int i5 = 0b1000000000; // 二进制表示的512
-        long l = 9000000000000000000L; // long型的结尾需要加L
+int i2 = -2147483648;
+int i3 = 2_000_000_000; // 加下划线更容易识别
+System.out.println(i3);
+int i4 = 0xff0000; // 十六进制表示的16711680
+int i5 = 0b1000000000; // 二进制表示的512
+long l = 9000000000000000000L; // long型的结尾需要加L
 ```
 
 
@@ -58,11 +58,11 @@ double d2 = -1.79e308;
 double d3 = 4.9e-324; // 科学计数法表示的4.9x10^-324
 ```
 
-
+**注**：小数后不加后缀默认为 double，想要表示 float，必须加上后缀 f。
 
 # 布尔类型
 
-布尔类型`boolean`只有`true`和`false`两个值：
+布尔类型`boolean`只有`true`和`false`两个值，且打印值就是其本身（**区别于 C**）：
 
 ```java
 boolean b1 = true;
@@ -72,7 +72,9 @@ int age = 12;
 boolean isAdult = age >= 18; // 计算结果为false
 ```
 
-注：理论上存储布尔类型只需要1 bit，但是**通常JVM内部会把`boolean`表示为4字节整数。**
+
+
+**注**：理论上存储布尔类型只需要1 bit，但是**通常JVM内部会把`boolean`表示为4字节整数。**
 
 
 
