--- a/9.面向对象/9.8.实例字段、静态字段以及静态方法/实例字段、静态字段以及静态方法.md
+++ b/9.面向对象/9.8.实例字段、静态字段以及静态方法/实例字段、静态字段以及静态方法.md
@@ -111,3 +111,27 @@ public interface Person {
 }
 ```
 
+
+
+编译器会自动加上 `public statc final`，因此静态字段的初始化可以简写为：
+
+```java
+public interface Person {
+    int MALE = 1;
+    int FEMALE = 2;
+}
+```
+
+
+
+练习：见 `calNum.java`
+
+
+
+# 小结
+
+1. 实例字段是绑定在实例上的，通过 `instance.field` 访问，不同实例的同名实例字段互不影响。
+2. 静态字段绑定在类上，实例方法上加上 `static` 修饰就变成了静态字段，通过 `class.field` 访问，不同实例共享同一静态方法。
+3. 静态方法绑定在类上，通过 `class.method_name` 调用。
+4. 静态方法只能访问静态字段（直接写出标识符，不用加上类名），无法访问实例字段。
+5. 接口不能使用实例字段，但可以使用静态字段，可通过 `public static final type field_name`  定义，一般 `public static final` 可以省略。
