--- a/9.面向对象/9.7.接口/接口.md
+++ b/9.面向对象/9.7.接口/接口.md
@@ -17,7 +17,7 @@ interface Person {
 }
 ```
 
--   接口中的方法默认都是 `public abstract`的，因此这两个修饰符可能省略不写。
+-   接口中的方法默认都是 `public abstract`的，因此这两个修饰符可以省略不写。
 
 
 
