--- a/9.面向对象/9.12.模块/模块.md
+++ b/9.面向对象/9.12.模块/模块.md
@@ -137,9 +137,37 @@ A1：我们可以用它来打包 JRE。
 
 # 打包 JRE
 
-Q2：什么是 JRE ?
+Q2：JRE 和 JDK 是什么？有什么关系？
 
 A2：
+
+-   **JRE（Java Runtime Environment）即 Java 运行环境**。包含 Java 虚拟机，Java 基础类库。它是运行 Java 程序所需的软件环境，是**提供给**希望运行 Java 程序的**用户**的。
+-   **JDK（Java Development Kit）即 Java 开发工具包**。**包含 JRE** 以及开发 Java 语言所需的工具包（如编辑器 javac，调试和分析工具 jconsole，jvisualvm 等）、文档和 demo 等。它是开发 Java 程序所需的工具套件，是**提供给**希望开发 Java 程序的**程序员**的。
+
+
+
+Q3：如何打包 JRE ？
+
+A4：Java 9 之前运行 Java 程序需要下载完整的 JRE，再运行 jar 包。而实际我们只需要使用到 JRE 的部分模块。Java 9 之后运行一个程序只需要拷贝一份 JRE （只带有需要的模块）即可，这可以通过 **`jlink` 命令**实现：
+
+```bash
+jlink --module-path hello.jmod --add-modules java.base,java.xml,hello.world --output jre/
+```
+
+-   **`--module-path`参数**指定了我们自己的模块`hello.jmod`
+-   **`--add-modules`参数**中指定了我们用到的3个模块`java.base`、`java.xml`和`hello.world`，用`,`分隔
+-   **`--output`参数**指定输出目录
+
+然后，再当前目录下就会生成 `jre` 目录，这是一个完整的并且带有我们自己`hello.jmod`模块的 JRE：
+
+![image-20200925154603825](https://gitee.com/llillz/images/raw/master/geybCDis7lhw4Su.png)
+
+可以直接运行这个 JRE：
+
+```bash
+$ jre/bin/java --module hello.world
+Hello, xml!
+```
 
 
 
@@ -186,6 +214,6 @@ module hello.world {
 1. jar 文件是 Java 项目编译后所有 `.class` 文件的打包
 2. 模块（jmod 文件）是带有依赖关系的所有 `.class` 文件的打包
 3. 从 Java 源码到构建模块的过程：`.java` 文件 -> **编译** -> `.class` 文件 -> **打包** -> jar 文件 -> **转换** -> 模块（jmod 文件）
-4. 使用模块可以按需打包 JRE
+4. 发送方使用模块可以按需打包成 JRE，接收方只需要使用 `java` 命令就能够即可执行程序
 5. 模块对类的访问进行了限制。如果希望外界访问本模块的包，需要 **`exports` **；反之，如果希望访问其他模块的包，需要 **`requires`** 。
 
