--- a/10.Java核心类/10.3.包装类型/包装类型.md
+++ b/10.Java核心类/10.3.包装类型/包装类型.md
@@ -1,10 +1,10 @@
 >    回顾：Java 中的数据类型分为基本类型和引用类型。
 >
->   -   **基本类型**：byte`，`short`，`int`，`long`，`boolean`，`float`，`double`，`char
+>   -   **基本类型**：`byte`，`short`，`int`，`long`，`boolean`，`float`，`double`，`char`
 >
 >   -   **引用类型**：所有`class`和`interface`类型
 >
->   注：引用类型可以赋值为`null`，表示空，但基本类型不能赋值为`null`
+>   **注**：引用类型可以赋值为`null`，表示空，但基本类型不能赋值为`null`
 
 
 
@@ -88,6 +88,8 @@ int x = n; // 编译器自动使用 Integer.intValue()
 
 
 
+---
+
 **Q5**：自动装箱和自动拆箱缺点？
 
 A5：
@@ -142,14 +144,14 @@ public final class Integer extends Number implements Comparable<Integer>, Consta
 
 ## 静态属性
 
-| 所属类被   | 实例                                                         |
-| ---------- | ------------------------------------------------------------ |
-| Boolean 类 | `Boolean t = Boolean.TRUE;`                                  |
-|            | `Boolean f = Boolean.FALSE;`                                 |
-| Integer 类 | `int max = Integer.MAX_VALUE; // 2147483647 int可表示的最大值` |
-|            | `int min = Integer.MIN_VALUE; // -2147483648 int可表示的最小值` |
-| Long       | `int sizeOfLong = Long.SIZE; // Long类型占用 64 (bits)`      |
-|            | `int bytesOfLong = Long.BYTES; // Long类型占用 8 (bytes)`    |
+| 所属类别 | 实例                                                         |
+| -------- | ------------------------------------------------------------ |
+| Boolean  | `Boolean t = Boolean.TRUE;`                                  |
+|          | `Boolean f = Boolean.FALSE;`                                 |
+| Integer  | `int max = Integer.MAX_VALUE; // 2147483647 int可表示的最大值` |
+|          | `int min = Integer.MIN_VALUE; // -2147483648 int可表示的最小值` |
+| Long     | `int sizeOfLong = Long.SIZE; // Long类型占用 64 (bits)`      |
+|          | `int bytesOfLong = Long.BYTES; // Long类型占用 8 (bytes)`    |
 
 
 
