添加：异常的定义、捕获以及抛出

--- a/11.异常处理/11.1.异常的定义以及捕获方法/异常的定义以及捕获方法.md
+++ b/11.异常处理/11.1.异常的定义以及捕获方法/异常的定义以及捕获方法.md
@@ -81,15 +81,248 @@ public class Instance {
     public byte[] getBytes(String charsetName) throws UnsupportedEncodingException {...}
     ```
 
-    
+
 
 **注**：只要是方法声明的 Checked Exception，不在调用层捕获，也必须在更高的调用层捕获。所有未捕获的异常，最终也必须在`main()`方法中捕获，不会出现漏写`try`的情况。这是由编译器保证的。`main()`方法也是最后捕获`Exception`的机会。
 
 
 
+---
+
+Q5：可能出现多个异常时该如何捕获？
+
+A5：
+
+1.  使用多个 `catch` 语句分别捕获一种异常。JVM 按顺序进行匹配，当捕获到相应异常，对应 `catch` 语句块会被执行，后面的 `catch` 语句不会继续匹配。
+
+2.  **`catch` 语句的排列顺序**按照：**子类在前，父类在后**。
+
+3.  可以使用一条 `catch` 语句捕获多个**没有继承关系**的异常，异常之间用 `|` 连接，例如：
+
+    ```java
+    try{
+    	...
+    } catch(IOException | NumberFormatException e) {
+        ...
+    }
+    ```
+
+    
+
+**注**：
+
+-   如果希望处理异常后执行一些语句，可以使用 **`finally` 语句**。
+-   如果方法声明了异常，则可以省略 `catch` ，仅保留 `try` 和 `finally`。
+
+
+
+# 抛出异常
+
+如果当前方法抛出异常但没有捕获，那异常就会被抛到上层的调用方法。直至遇到 `try...catch` 捕获该异常。
+
+
+
+通过**`printStackTrace()`可以打印出方法的调用栈**：
+
+```java
+import java.io.UnsupportedEncodingException;
+import java.util.Arrays;
+
+import static java.lang.System.out;
+
+public class Instance {
+    public static void main(String[] args) {
+        try{
+            process1();
+        } catch(Exception e){
+            e.printStackTrace();
+        }
+        
+    }
+
+    static byte[] toGBK(String s) {
+        try {
+            return s.getBytes("GBK");
+        } catch (UnsupportedEncodingException | NumberFormatException e) {
+            out.println(e);
+            return s.getBytes();
+        } finally {
+            out.println("End.");
+        }
+    }
+
+    static void process1(){
+        process2();
+    }
+
+    static void process2(){
+        Integer.parseInt(null); // 会抛出 NumberFormatException
+    }
+}
+```
+
+输出：
+
+```java
+import java.io.UnsupportedEncodingException;
+import java.util.Arrays;
+
+import static java.lang.System.out;
+
+public class Instance {
+    public static void main(String[] args) {
+        try{
+            process1();
+        } catch(Exception e){
+            e.printStackTrace();
+        }
+        
+    }
+
+    static void process1(){
+        process2();
+    }
+
+    static void process2(){
+        Integer.parseInt(null); // 会抛出 NumberFormatException
+    }
+}
+
+```
+
+
+
+输出：
+
+```
+java.lang.NumberFormatException: null
+        at java.base/java.lang.Integer.parseInt(Integer.java:614)
+        at java.base/java.lang.Integer.parseInt(Integer.java:770)
+        at Instance.process2(Instance.java:34)
+        at Instance.process1(Instance.java:30)
+        at Instance.main(Instance.java:11)
+```
+
+
+
+可以看到，`printStackTrace()` 方法自底向上输出了抛出异常过程中经历的方法。
+
+
+
+---
+
+Q6：如何抛出异常？
+
+A6：分为两步
+
+1.  使用 `new` 关键字创建异常实例
+2.  使用 `throw` 关键字抛出异常
+
+
+
+实例：
+
+```java
+void process2(String s) {
+    if (s==null) {
+        NullPointerException e = new NullPointerException();
+        throw e;
+    }
+}
+```
+
+或简写成：
+
+```java
+void process2(String s) {
+    if (s==null) {
+        throw new NullPointerException();  // 创建异常对象后直接抛出
+    }
+}
+```
+
+
+
+Q7：什么异常类型转换问题？
+
+A7：如果一个方法捕获了某个异常后，又在`catch`子句中抛出新的异常，就相当于把抛出的异常类型“转换”了：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        try {
+            process1();
+        } catch (Exception e) {
+            e.printStackTrace(); // 输出方法调用栈
+        }
+    }
+
+    static void process1() { // process1捕获了process2的NullPointerException异常，但马上又抛出IllegalArgumentException异常 
+        try {
+            process2();
+        } catch (NullPointerException e) {
+            throw new IllegalArgumentException(e);
+        }
+    }
+
+    static void process2() {
+        throw new NullPointerException();
+    }
+}
+```
+
+-   在这种情况下，`printStackTrace()` 方法不会输出 NullPointerException 异常的有关信息，它就像被IllegalArgumentException 异常覆盖了一样。
+
+
+
+为了解决上面的问题，避免异常信息的丢失。我们可以在每次使用 `throw` 抛出异常时，把它捕获时的异常作为参数传给新的异常类：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        try {
+            process1();
+        } catch (Exception e) {
+            e.printStackTrace(); // 输出方法调用栈
+        }
+    }
+
+    static void process1() { // process1捕获了process2的NullPointerException异常，但马上又抛出IllegalArgumentException异常 
+        try {
+            process2();
+        } catch (NullPointerException e) {
+            throw new IllegalArgumentException(e); // 把捕获的异常作为传输传给新的异常类
+        }
+    }
+
+    static void process2() {
+        throw new NullPointerException();
+    }
+}
+```
+
+
+
+Q8： `throw` 异常后，`finally` 语句块是否还会被执行？
+
+A8：JVM 会先执行 `finaly` 语句块，然后再抛出异常。
+
+
+
+Q9：什么是**异常屏蔽（Suppressed Exception）**？
+
+A9：Java 的 `catch` 只能抛出一个异常，如果此时 `finally` 语句块中也抛出了异常，则 `catch` 中的异常不会被抛出。这种现象就是异常屏蔽。
+
 # 小结
 
 1.  异常本质上就是 class，根是 `Throwable` ，它又分为 `Error` 和 `Exception` 两类。
 2.  `Exception` 可分为 `RuntimeException` 以及其他异常类。其中后者是必须捕获的，被称作 Checked Exception。而 `Error` 和 `RuntimeException` 可以依情况而定。
-3.  使用 `try ... catch` 语句捕获异常。
-4.  声明中带有 `throws` 关键字的方法必须在它的调用方或是更高层进行捕获。
+3.  使用 `try ... catch` 语句捕获异常，多个 `catch` 语句捕获多个异常，按照子类在前，父类在后的顺序放置。
+4.  一条 `catch` 语句可以用于捕获多个无继承关系的异常，各个异常之间用 `|` 连接。
+5.  声明中带有 `throws` 关键字的方法必须在它的调用方或是更高层进行捕获。
+6.  如果希望处理异常后执行一些语句，可以使用 `finally` 语句。
+7.  使用 `printStackTrace()` 方法打印异常的传播栈，这在调试时很有用。
+8.  使用 `throe new 异常类` 语句抛出异常。
+9.  捕获异常并再次抛出新的异常时，应该持有原始异常信息。可以通过将原始异常作为参数传给新异常类实现。
+10.  `catch` 和 `finally` 都抛出异常时，后者会覆盖前者，这被称作异常屏蔽。一般不推荐在 `finally` 中抛出异常。
+
