--- a/12.注解/注解.md
+++ b/12.注解/注解.md
@@ -1,4 +1,5 @@
 # 注解的基本概念
+
 Q：注解是什么？
 
 A：注解是一种放在类、方法、字段、参数之前的特殊的注释。但是`注解 != 注释`。
@@ -114,13 +115,144 @@ public @interface Report {
 - 构造方法：`ElementType.CONSTRUCTOR`；
 - 方法参数：`ElementType.PARAMETER`。
 
+
+
 ### @Retention
+
+元注解`@Retention`定义了 Annotation 的生命周期：
+- 仅编译期：`RetentionPolicy.SOURCE`；
+- 仅class文件：`RetentionPolicy.CLASS`；
+- 运行期：`RetentionPolicy.RUNTIME`
+
+> **注**：如果 `@Retention` 不存在，则该 `Annotation` 默认为 CLASS。因为通常我们自定义的 `Annotation` 都是 RUNTIME，所以，务必要加上 `@Retention(RetentionPolicy.RUNTIME)` 这个元注解
 
 
 
 ### @Repeatable
 
+使用 `@Repeatable` 这个元注解可以定义 `Annotation` 是否可重复
+
 
 
 ### @Inherited
 
+如果一个类（对于接口没有继承的效果）使用了 `@Inherited`，那么它的子类可以继承父类的 `Annotation`。这里的 `Annotation` 的 `@Target` 必须是 `ElementTypr.TYPE`。
+
+
+
+# 读取注解
+
+>   *！这块内容没有掌握*
+
+>   `SOURCE`类型的注解主要由编译器使用，因此我们一般只使用，不编写。`CLASS`类型的注解主要由底层工具库使用，涉及到class的加载，一般我们很少用到。只有`RUNTIME`类型的注解不但要使用，还经常需要编写。
+>
+>   因此这里只讨论如何读取`RUNTIME`类型的注解。
+
+读取直接要使用到反射 API，具体来说可分为两种方法：
+
+-   方法一：先判断`Annotation`是否存在，如果存在，就直接读取
+
+    ```java
+    Class cls = Person.class;
+    if (cls.isAnnotationPresent(Report.class)) {
+        Report report = cls.getAnnotation(Report.class);
+        ...
+    }
+    ```
+
+-   方法二：直接读取`Annotation`，如果`Annotation`不存在，将返回`null`：
+
+    ```java
+    Class cls = Person.class;
+    Report report = cls.getAnnotation(Report.class);
+    if (report != null) {
+       ...
+    }
+    ```
+
+读取方法、字段和构造方法的`Annotation`和Class类似。但要读取方法参数的`Annotation`就比较麻烦一点，因为方法参数本身可以看成一个数组，而每个参数又可以定义多个注解，所以**，一次获取方法参数的所有注解就必须用一个二维数组来表示**。
+
+实例：对于以下方法定义的注解：
+
+```java
+public void hello(@NotNull @Range(max=5) String name, @NotNull String prefix) {
+}
+```
+
+要读取方法参数的注解，我们先用反射获取`Method`实例，然后读取方法参数的所有注解：
+
+```java
+// 获取Method实例:
+Method m = ...
+// 获取所有参数的Annotation:
+Annotation[][] annos = m.getParameterAnnotations();
+// 第一个参数（索引为0）的所有Annotation:
+Annotation[] annosOfName = annos[0];
+for (Annotation anno : annosOfName) {
+    if (anno instanceof Range) { // @Range注解
+        Range r = (Range) anno;
+    }
+    if (anno instanceof NotNull) { // @NotNull注解
+        NotNull n = (NotNull) anno;
+    }
+}
+```
+
+# 使用注解的实例
+
+## 实例一：定义一个满足 `@range` 注解要求的 `String` 字段
+
+首先需要定义注解 `@range`：
+
+```java
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.FIELD)
+public @interface Range {
+    int min() default 0;
+    int max() default 255;
+}
+```
+
+在某个JavaBean中，可以使用该注解：
+
+```java
+public class Person {
+    @Range(min=1, max=20)
+    public String name;
+
+    @Range(max=10)
+    public String city;
+}
+```
+
+定义了注解，本身对程序逻辑没有任何影响。我们必须自己编写代码来使用注解，这里编写一个`Person`实例的检查方法 `check`，它可以检查`Person`实例的`String`字段长度是否满足`@Range`的定义：
+
+```java
+void check(Person person) throws IllegalArgumentException, ReflectiveOperationException {
+    // 遍历所有Field:
+    for (Field field : person.getClass().getFields()) {
+        // 获取Field定义的@Range:
+        Range range = field.getAnnotation(Range.class);
+        // 如果@Range存在:
+        if (range != null) {
+            // 获取Field的值: 如果是 String 就对其范围进行合法性判断
+            Object value = field.get(person); // 根据字段的方法调用字段的值 有点意思
+            // 如果值是String:
+            if (value instanceof String) {
+                String s = (String) value;
+                // 判断值是否满足@Range的min/max:
+                if (s.length() <= range.min() || s.length() >= range.max()) {
+                    throw new IllegalArgumentException("Invalid field: " + field.getName());
+                }
+            }
+
+            if (value instanceof Integer) {
+                Integer i = (Integer) value;
+                if (i <= range.min() || i >= range.max()) {
+                    throw new IllegalArgumentException("Invalid field: " + field.getName());
+                }
+            }
+        }
+    }
+}
+```
