--- a/15.集合/1.使用List.md
+++ b/15.集合/1.使用List.md
@@ -339,6 +339,5 @@ out.println(list.contains(new Person("Li", 22))); // true
 7.  如果需要使用 `List.contains()` 方法，需要先重写元素类的 `equals()` 方法
 8.  正确重写 `equals()` 方法需要满足进行三步
     1.  定义相等的逻辑（例如，定义 `Person` 类的 name 和 age 分别相等，则 `Person` 相等）
-    2.  判断待比较类是否属于列表元素的类（利用 `instanceof` 关键字）
-    3.  字段分别比较：对于引用类型，使用 `Objects(A, B)` 方法；对于基本类型，使用 `==`
-
+    2.  判断待比较类是否属于列表元素的类（利用 `instanceof` 关键字）。如果是，进入3；否则，返回 flase
+    3.  字段分别比较：对于引用类型，使用 `Objects(A, B)` 方法；对于基本类型，使用 `==`。返回各个字段比较结果的 `&&`。
