--- a/Java-从0开始（基础）/15.集合/2.使用Map - 副本.md
+++ b/Java-从0开始（基础）/15.集合/2.使用Map - 副本.md
@@ -404,3 +404,43 @@ public class NewStudent {
 
 
 
+# 使用 Properties
+
+在编写应用程序的时候，经常需要读写配置文件。因为配置文件非常常用，所以**Java集合库提供了一个`Properties`来表示一组“配置”**。
+
+Java默认配置文件以`.properties`为扩展名，每行以`key=value`表示，以`#`开头的是注释。以下是一个典型的配置文件：
+
+```properties
+# setting.properties
+
+last_open_file=/data/hello.txt
+auto_save_interval=60
+```
+
+
+
+## 读取配置文件
+
+读取配置文件，共有三步
+
+1. 创建 `Properties` 实例
+2. 使用 `Properties` 实例的 `load()`方法读取文件流、jar 资源流或是内存流
+3. 调用 `Properties` 实例的 `getProperty()` 获取配置
+
+
+
+典例：读取前面提到的`.properties`文件
+
+```java
+String f = "setting.properties";
+Properties props = new Properties();
+props.load(new java.io.FileInputStream(f));
+
+String filepath = props.getProperty("last_open_file");
+String interval = props.getProperty("auto_save_interval", "120");
+```
+
+
+
+## 写入配置文件
+
