--- a/Java-从0开始（基础）/9.面向对象/9.5.多态/多态.md
+++ b/Java-从0开始（基础）/9.面向对象/9.5.多态/多态.md
@@ -1,3 +1,10 @@
+# 多态的实现途径
+
+- 编译时多态性
+    - 重载
+    - 类属（genericity）
+- 运行时多态性：动态绑定
+
 # Override vs Overload
 
 Override也叫方法覆写/覆盖/重写，Overload也叫方法重载。
