添加：线程同步&死锁

--- a/Java-从0开始（基础）/21.多线程/多线程基础.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础.md
@@ -103,7 +103,7 @@ class MyThread extends Thread{
     }
 }
 
-class MyRunnable implements Runnable{
+class MyRunnable implements Runnable{ // 实现 Runnable 接口
     @Override
     public void run() {
         System.out.println("start a new thread2.");
@@ -446,6 +446,523 @@ class HelloThread extends Thread {
 
 注：这里涉及到 **Java 的内存模型**，这部分等到以后再深入。
 
+# 守护线程
+
+>   这里的守护是名词。
+
+-   守护线程是指为其他线程服务的线程。
+-   在 JVM 中，所有非守护线程都执行完毕后，无论有没有守护线程，虚拟机都会自动退出（此时守护线程也会结束）。
+
+**编写的守护线程需要注意**：**不能持有任何需要关闭的资源**，因为 JVM 退出后，守护线程没有机会关闭文件，将会导致数据丢失。
+
+
+
+创建一个守护线程只需在调用其 `start()` 方法前声明：
+
+```java
+t.setDaemon(true); // t是具体的线程对象
+```
+
+实例：编写一个守护线程，等待其他正常线程（这里只有main线程）结束后，JVM 退出（守护线程也结束）。
+
+```java
+public class Main {
+	public static void main(String[] args) {
+		Thread t = new Thread1();
+		t.setDaemon(true); // 创建一个守护线程 如果注释该行 那么线程t就会一致在循环中 JVM无法正常退出
+		t.start();
+		System.out.println("main: wait 3 sec...");
+		try {
+			Thread.sleep(3000);
+		} catch (InterruptedException e) {
+		}
+		System.out.println("main: end.");
+	}
+
+}
+
+class Thread1 extends Thread {
+
+	public void run() {
+		for (;;) {
+			System.out.println("Thread-1: running...");
+			try {
+				Thread.sleep(500);
+			} catch (InterruptedException e) {
+			}
+		}
+	}
+}
+```
+
+输出：
+
+```cmd
+main: wait 3 sec...
+Thread-1: running...
+Thread-1: running...
+Thread-1: running...
+Thread-1: running...
+Thread-1: running...
+Thread-1: running...
+main: end.
+```
+
+
+
+# 线程同步
+
+## 多线程模型中的数据不一致问题
+
+Q：**多线程模型存在一个问题**：多个线程读写共享变量，可能出现数据不一致的问题。
+
+实例：创建两个线程，一个让共享变量自增10000次，另一个让共享变量自减10000次。结果极大概率不为0，且不稳定。
+
+```java
+public class App {
+    public static void main(String[] args) throws Exception {
+        System.out.println("start main...");
+        var t1 = new Thread1();
+        var t2 = new Thread2();
+        t1.start();
+        t2.start();
+        t1.join();
+        t2.join();
+        System.out.println("Counter.count = " + Counter.count);
+        System.out.println("end main.");
+    }
+}
+
+class Counter {
+    public static int count = 0;
+}
+
+class Thread1 extends Thread {
+    @Override
+    public void run() {
+        for (int i = 0; i < 10000; i++) {
+            Counter.count++;
+        }
+    }
+}
+
+class Thread2 extends Thread {
+    @Override
+    public void run() {
+        for (int i = 0; i < 10000; i++) {
+            Counter.count--;
+        }
+    }
+}
+```
+
+结果：每次的运行结果不稳定。
+
+分析：导致这种现象的原因是两个线程的代码对应的指令不具有原子性。以自增的一行代码为例，其指令是
+
+```
+ILOAD
+IADD
+ISTORE
+```
+
+假设`n`的值是`100`，如果两个线程同时执行`n = n + 1`，得到的结果很可能不是`102`，而是`101`，原因在于：
+
+```cmd
+┌───────┐    ┌───────┐
+│Thread1│    │Thread2│
+└───┬───┘    └───┬───┘
+    │            │
+    │ILOAD (100) │
+    │            │ILOAD (100)
+    │            │IADD
+    │            │ISTORE (101)
+    │IADD        │
+    │ISTORE (101)│
+    ▼            ▼
+```
+
+可以看到线程1的指令刚运行一条，线程2就将其中断，结果不是预计的 `102`，而是 `101` 了。
+
+可见，**要保证多线程模型的逻辑正确，对共享变量进行读写，需要一组指令以原子方式执行。**对于上面例子就是
+
+```cmd
+┌───────┐     ┌───────┐
+│Thread1│     │Thread2│
+└───┬───┘     └───┬───┘
+    │             │
+    │-- lock --   │
+    │ILOAD (100)  │
+    │IADD         │
+    │ISTORE (101) │
+    │-- unlock -- │
+    │             │-- lock --
+    │             │ILOAD (101)
+    │             │IADD
+    │             │ISTORE (102)
+    │             │-- unlock --
+    ▼             ▼
+```
+
+
+
+---
+
+Q：如何保证一组指令以原子方式执行？
+
+A：通过加锁和解锁的方式实现。
+
+>   即使在执行期线程被操作系统中断执行，其他线程也会因为无法获得锁导致无法进入此指令区间。只有执行线程将锁释放后，其他线程才有机会获得锁并执行。这种加锁和解锁之间的代码块我们称之为**临界区（Critical Section）**，任何时候临界区最多只有一个线程能执行。
+
+
+
+---
+
+Q：如何**使用 Java 的 `synchronized` 关键字进行加锁**
+
+A：**使用`synchronized`的基本流程**：
+
+1.  找出修改共享变量的线程代码块；
+2.  选择一个共享实例作为锁；
+3.  使用`synchronized(lockObject) { ... }`
+
+
+
+**实例**：以加锁的方式改写前面的实例
+
+```java
+public class App {
+    public static void main(String[] args) throws Exception {
+        System.out.println("start main...");
+        var t1 = new Thread1();
+        var t2 = new Thread2();
+        t1.start();
+        t2.start();
+        t1.join();
+        t2.join();
+        System.out.println("Counter.count = " + Counter.count);
+        System.out.println("end main.");
+    }
+}
+
+class Counter {
+    public static final Object lock = new Object(); // 创建锁
+    public volatile static int count = 0;
+}
+
+class Thread1 extends Thread {
+    @Override
+    public void run() {
+        for (int i = 0; i < 10000; i++) {
+            synchronized (Counter.lock) { // 获取锁
+                Counter.count++;
+            } // 释放锁
+        }
+    }
+}
+
+class Thread2 extends Thread {
+    @Override
+    public void run() {
+        for (int i = 0; i < 10000; i++) {
+            synchronized (Counter.lock) {
+                Counter.count--;
+            }
+        }
+    }
+}
+```
+
+输出：
+
+```cmd
+start main...
+Counter.count = 0
+end main.
+```
+
+-   用`Counter.lock`实例作为锁
+-   两个线程在执行各自的`synchronized(Counter.lock) { ... }`代码块时，必须先获得锁，才能进入代码块进行
+-   执行结束后，在`synchronized`语句块结束会自动释放锁，即对`Counter.count`变量的读写不可能同时进行
+
+
+
+## synchronized 的优缺点
+
+优点：解决了多线程同步访问共享变量的正确性问题
+
+缺点：性能下降，具体表现为
+
+-   `synchronized`代码块无法并发执行
+-   加锁和解锁需要消耗一定的时间
+
+
+
+## 使用 synchronized 的常见误区
+
+-   错误1：为存在竞争关系的线程分别提供了锁
+-   错误2：为不存在竞争关系的线程只提供了一个锁
+-   **使用原则**：将存在竞争关系的线程分为一组，每组的线程公用一个锁。即保证了逻辑正确，也充分运用了并发。
+
+
+
+## 不需要 synchronized 的操作
+
+**JVM 规范定义了几种原子操作**：
+
+-   基本类型（`long`和`double`除外）赋值，例如：`int n = m`  
+-   引用类型赋值，例如：`List<String> list = anotherList`
+-   注：`long`和`double`是64位数据，JVM没有明确规定64位赋值操作是不是一个原子操作，不过在x64平台的JVM是把`long`和`double`的赋值作为原子操作实现的。
+
+
+
+**是否需要 synchronized 的标准**
+
+-   原子操作的语句不需要同步（使用 synchronized）
+
+-   如果是多行赋值（属于非原子操作），则需要同步
+
+    ```java
+    class Pair {
+        volatile int first;
+        volatile int last;
+        public void set(int first, int last) {
+            synchronized(this) { //
+                this.first = first;
+                this.last = last;
+            }
+        }
+    }
+    ```
+
+-   有时可以将非原子操作转为原子操作，例如
+
+    ```java
+    class Pair {
+        volatile int[] pair; // 共享变量
+        public void set(int first, int last) {
+            int[] ps = new int[] { first, last }; // 1.
+            this.pair = ps; // 2.
+        }
+    }
+    ```
+
+    -   对于`1.`：该语句是在方法内部定义局部变量，由于**每个线程都有各自的局部变量，且互不可见，因此无需同步**
+    -   对于`2.`：该语句是引用类型赋值，属于原子操作，因此无需同步
+
+
+
+## synchronized 修饰实例方法和静态方法
+
+当**锁住的是`this`实例时，可以用`synchronized`修饰这个方法**。下面两种写法是等价的：
+
+```java
+public void add(int n) {
+    synchronized(this) { // 锁住this
+        count += n;
+    } // 解锁
+}
+```
+
+```java
+public synchronized void add(int n) { // 锁住this
+    count += n;
+} // 解锁
+```
+
+反过来，用 `synchronized` 修饰实例方法，表示锁住 `this` 实例。
+
+
+
+---
+
+任何一个类都有一个由 JVM 自动创建的`Class`实例，因此**用 `synchronized` 修饰静态方法，此时锁住的该类的 `Class` 实例**。即以下两种方式等价：
+
+```java
+public class Counter {
+    public static void test(int n) {
+        synchronized(Counter.class) { // 
+            ...
+        }
+    }
+}
+```
+
+```java
+public synchronized class Counter {
+    public static void test(int n) {
+        ...
+    }
+}
+```
+
+
+
+
+
+
+
+# 线程安全
+
+Q：线程安全的定义？
+
+A：这里提到的线程安全是针对类的。如果一个类被设计为允许多线程正确访问，我们就说这个类就是“线程安全”的（thread-safe）。
+
+
+
+实例：定义一个计数器类
+
+```java
+package packg;
+
+public class Counter {
+    private volatile int count = 0;
+
+    public void add(int n) {
+        // 加上n
+        synchronized (this) { // 以当前的实例对象为锁
+            this.count += n;
+        }
+    }
+
+    public void dec(int n) {
+        // 加上n
+        synchronized (this) {
+            this.count -= n;
+        }
+    }
+
+    public int getCount() {
+        return this.count;
+    }
+}
+```
+
+调用
+
+```java
+var t1 = new Counter();
+var t2 = new Counter();
+
+new Thread(() -> {
+    t1.add(10);
+}).start();
+new Thread(() -> {
+    t2.add(10);
+}).start();
+new Thread(() -> {
+    t1.dec(11);
+}).start();
+new Thread(() -> {
+    t2.dec(10);
+}).start();
+new Thread(() -> {
+    System.out.println("t1.count = " + t1.getCount());
+}).start();
+new Thread(() -> {
+    System.out.println("t2.count = " + t2.getCount());
+}).start();
+```
+
+输出：
+
+```cmd
+t1.count = -1
+t2.count = 0
+```
+
+
+
+---
+
+Q：Java 提供的内置类，有哪些是线程安全的？
+
+A：
+
+-   一些不变类：例如`String`，`Integer`，`LocalDate`，它们的所有成员变量都是`final`，多线程同时访问时只能读不能写
+-   类似`Math`这些只提供静态方法，没有成员变量的类
+-   Java 标准库的`java.lang.StringBuffer`
+
+**注**：大部分的类都是非线程安全的！不能在多线程中修改它们。如果只是读取，则可以安全的共享。
+
+# 死锁
+
+Q：什么时可重入锁？
+
+A：
+
+-   Java的线程锁是**可重入锁**
+-   Java中，同一个线程重复获取同一个锁，这种锁就是可重入锁
+
+
+
+---
+
+Q：什么是死锁？
+
+A：一个线程可以获取一个锁后，再继续获取另一个锁。假如两个线程分别持有不同的锁，然后试图获取对方的锁，这将导致死锁。
+
+
+
+死锁的实例：
+
+```java
+public void add(int m) {
+    synchronized(lockA) { // 获得lockA的锁
+        this.value += m;
+        synchronized(lockB) { // 获得lockB的锁
+            this.another += m;
+        } // 释放lockB的锁
+    } // 释放lockA的锁
+}
+
+public void dec(int m) {
+    synchronized(lockB) { // 获得lockB的锁
+        this.another -= m;
+        synchronized(lockA) { // 获得lockA的锁
+            this.value -= m;
+        } // 释放lockA的锁
+    } // 释放lockB的锁
+}
+```
+
+分析：
+
+如果线程1和线程2分别执行了`add()`和`dec()`方法时
+
+-   线程1：执行 `add()`，获得 lockA
+-   线程2：执行 `dec()`，获得 lockB
+
+之后，
+
+-   线程1：准备获得 lock B 失败，进入等待
+-   线程2：准备获得 lock A 失败，进入等待
+
+两个线程最终将进入无限等待对方的锁的情况，造成死锁。
+
+发生死锁后，只能强制结束 JVM 进程。
+
+
+
+---
+
+Q：如何避免死锁？
+
+A：线程获取锁的顺序要一致。对于上述例子来说可以修改 `dec` 方法
+
+```java
+public void dec(int m) {
+    synchronized(lockA) { // 获得lockA的锁
+        this.value -= m;
+        synchronized(lockB) { // 获得lockB的锁
+            this.another -= m;
+        } // 释放lockB的锁
+    } // 释放lockA的锁
+}
+```
+
+
+
 # 小结
 
 -   创建线程
@@ -472,4 +989,17 @@ class HelloThread extends Thread {
         -   如果目标线程处在等待状态（调用 `join()` 方法），又收到了中断请求，此时 `join()` 方法会立即抛出 `InterruptedException` 异常，这时需要对其进行捕获
     2.  使用标志位：用一个**`running`标志位**来标识线程是否应该继续运行，在外部线程中，通过把`Thread.running`置为`false`，就可以让线程结束
         -   标志位判断需要正确使用`volatile`关键字，`volatile`关键字解决了共享变量在线程间的可见性问题
+-   守护线程
+    -   守护线程是为其他线程服务的线程
+    -   其他正常线程结束后，JVM 就会退出（此时守护线程也会结束）
+    -   JVM 退出后，守护线程没有机会关闭文件，因此守护线程不能持有任何需要关闭的资源
+-   线程同步
+    -   多线程读写共享变量会造成数据不一致问题，因此需要使用 `synchronized` 进行同步。
+    -   同步的本质是对存在竞争关系（会操作共享变量）的线程加锁，加锁后执行代码，然后解锁。只有获得锁的线程才能执行代码。对于存在竞争关系的线程而言，“锁”必须是同一个对象。
+    -   JVM 定义了几种原子操作。原子操作无需同步。
+    -   `synchronized` 修饰实例方法时，锁住的是 `this` 实例；修饰静态方法时，锁住的是当前类的 `Class` 实例
+-   线程安全是指一个类被设计为允许多线程正确访问。
+-   死锁
+    -   死锁是指两个线程持有不同的线程锁又同时试图获取对方的线程锁，导致无限等待的情况。
+    -   为了避免死锁，要保证线程获取锁的顺序一致。
 
