更新多线程

--- a/Java-从0开始（基础）/21.多线程/多线程基础.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础.md
@@ -963,6 +963,180 @@ public void dec(int m) {
 
 
 
+# 多线程协调
+
+`synchronized` 解决了多线程竞争的问题，但是没有解决多线程协调的问题。通过一个例子了解多线程的协调性：
+
+
+
+实例：创建一个队列，并提供两个线程分别实现添加任务和取出任务的功能。
+
+对于两个线程来说，具体希望
+
+- 线程1可以调用`addTask()`不断往队列中添加任务；
+- 线程2可以调用`getTask()`从队列中获取任务。如果队列为空，则`getTask()`应该等待，直到队列中至少有一个任务时再返回。
+
+即**多线程协调运行的原则**是：当条件不满足时，线程进入等待状态；当条件满足时，线程被唤醒，继续执行任务。
+
+```java
+import java.util.LinkedList;
+import java.util.Queue;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        var task = new TaskQueue();
+        new Thread(() -> { // 线程1 负责任务入队
+            task.addTask("Hello");
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                System.out.println(e);
+            }
+
+            task.addTask("World");
+
+        }).start();
+        new Thread(() -> { // 线程2 负责任务出队
+            task.getTask();
+            task.getTask();
+        }).start();
+    }
+}
+
+class TaskQueue {
+    Queue<String> queue = new LinkedList<>(); // 准备一个队列 保存任务（这里以String为例）
+
+    public synchronized void addTask(String s) { // 任务入队方法
+        this.queue.add(s);
+        System.out.println("任务 " + s + " 入队成功！当前队列有 " + this.queue.size() + " 个任务！");
+    }
+
+    public synchronized String getTask() { // 任务出队方法
+        while (this.queue.isEmpty()) {
+            System.out.println("等待队列加入任务...");
+            try {
+                Thread.sleep(1000);
+            } catch (Exception e) {
+                System.out.println(e);
+            }
+        }
+        String out = this.queue.remove();
+        System.out.println("任务 " + out + " 出队成功！当前队列有 " + this.queue.size() + " 个任务！");
+        return out;
+    }
+}
+```
+
+输出：
+
+```cmd
+任务 Hello 入队成功！当前队列有 1 个任务！
+任务 Hello 出队成功！当前队列有 0 个任务！
+等待队列加入任务...
+等待队列加入任务...
+等待队列加入任务...
+等待队列加入任务...
+Terminate batch job (Y/N)? y
+```
+
+可以发现，线程2进入 `while` 循环后，如果队列没有任务就会一直进入等待状态，而线程1也无法正常运行。这是因为两个线程共用一个线程锁 `this`，一旦线程2进入 `while` 循环，线程1也在等待线程2的锁释放才能继续执行。这就无法实现我们期望的功能。
+
+
+
+为了让线程2进入等待状态，把`getTask()` 方法改写成如下形式：
+
+```java
+public synchronized String getTask() {
+    while (queue.isEmpty()) {
+        // 调用wait()方法后就释放this锁
+        this.wait(); // 调用线程锁（这里是`this`）的wait()方法
+        // wait()方法返后就重新获取this锁
+    }
+    return queue.remove();
+}
+```
+
+- 使用 `lock.wait()` 方法让线程进入等待状态，其中 `lock` 是线程获取到的线程锁
+- 调用 `wait()` 方法后，线程会释放线程锁，与其竞争的其他线程就能获取到线程锁
+- `wait()` 方法返回后，线程会重新获得线程锁，并执行接下来的代码
+
+
+
+何时通知线程2恢复执行？这里需要在相同的线程锁对象上调用 `notify()` 方法。对于上面的例子，需要修改 `addTask()`方法：
+
+```java
+public synchronized void addTask(String s) {
+    this.queue.add(s);
+    this.notify(); // 唤醒在this锁等待的线程
+}
+```
+
+- 在往队列中添加了任务后，线程立刻对`this`锁对象调用`notify()`方法，这个方法会唤醒一个正在`this`锁等待的线程（就是在`getTask()`中位于`this.wait()`的线程），从而使得等待线程从`this.wait()`方法返回
+
+
+
+结合两部分，最后得到修改后的例子：
+
+```java
+import java.util.LinkedList;
+import java.util.Queue;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        var task = new TaskQueue();
+        new Thread(() -> {
+            task.addTask("Hello");
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                System.out.println(e);
+            }
+            task.addTask("World");
+        }).start();
+        new Thread(() -> {
+            task.getTask();
+            task.getTask();
+        }).start();
+    }
+}
+
+class TaskQueue {
+    Queue<String> queue = new LinkedList<>();
+
+    public synchronized void addTask(String s) {
+        this.queue.add(s);
+        System.out.println("任务 " + s + " 入队成功！当前队列有 " + this.queue.size() + " 个任务！");
+        this.notify();
+    }
+
+    public synchronized String getTask() {
+        while (this.queue.isEmpty()) {
+            System.out.println("等待队列加入任务...");
+            try {
+                this.wait();
+            } catch (Exception e) {
+                System.out.println(e);
+            }
+        }
+        String out = this.queue.remove();
+        System.out.println("任务 " + out + " 出队成功！当前队列有 " + this.queue.size() + " 个任务！");
+        return out;
+    }
+}
+```
+
+现在可以得到期望的输出：
+
+```cmd
+任务 Hello 入队成功！当前队列有 1 个任务！
+任务 Hello 出队成功！当前队列有 0 个任务！
+等待队列加入任务...
+任务 World 入队成功！当前队列有 1 个任务！
+任务 World 出队成功！当前队列有 0 个任务！
+```
+
+
+
 # 小结
 
 -   创建线程
