--- a/Java-从0开始（基础）/21.多线程/多线程基础.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础.md
@@ -1137,6 +1137,87 @@ class TaskQueue {
 
 
 
+---
+
+再看一个例子：启动一个线程用于任务入队、五个线程作为任务出队
+
+```java
+import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.Queue;
+
+public class App {
+    public static void main(String[] args) throws InterruptedException {
+        var q = new TaskQueue();
+        var ts = new ArrayList<Thread>();
+        // 启动5个 task出队线程
+        for (int i=0; i<5; i++) {
+            var t = new Thread() {
+                public void run() {
+                    // 尝试获取task:
+                    while (true) {
+                        try {
+                            String s = q.getTask();
+                            System.out.println("execute task: " + s);
+                        } catch (InterruptedException e) {
+                            return; // 被中断时就结束线程
+                        }
+                    }
+                }
+            };
+            t.start(); // 先启动线程
+            ts.add(t); // 把启动了的线程添加到ArrayList
+        }
+        // 启动1个task入队线程 （执行10次入队操作）
+        var add = new Thread(() -> {
+            for (int i=0; i<10; i++) {
+                String s = "t-" + Math.random();
+                System.out.println("add task: " + s);
+                q.addTask(s);
+                try { Thread.sleep(100); } catch(InterruptedException e) {} // 等待100ms
+            }
+        });
+        add.start();
+        add.join();
+        Thread.sleep(100);
+        // 使用中断结束5个获取task入队线程 否则它们将一直陷入while循环状态
+        for (var t : ts) {
+            t.interrupt();
+        }
+    }
+}
+
+class TaskQueue {
+    Queue<String> queue = new LinkedList<>();
+    
+    public synchronized void addTask(String s) {
+        this.queue.add(s);
+        this.notifyAll(); // 唤醒其他在wait的所有线程
+    }
+
+    public synchronized String getTask() throws InterruptedException {
+        while (queue.isEmpty()) {
+            this.wait();
+        }
+        return queue.remove();
+    }
+}
+```
+
+
+
+**`wait()` 和 `notifyAll()` 方法的作用机制**：
+
+>   参考：java中的notify和notifyAll有什么区别？ https://www.zhihu.com/question/37601861
+>
+>   **锁池**：假设线程A已经拥有了某个对象(注意:不是类)的锁，而其它的线程想要调用这个对象的某个synchronized方法(或者synchronized块)，由于这些线程在进入对象的synchronized方法之前必须先获得该对象的锁的拥有权，但是该对象的锁目前正被线程A拥有，所以这些线程就进入了该对象的锁池中。
+>
+>   **等待池**：假设一个线程A调用了某个对象的wait()方法，线程A就会释放该对象的锁后，进入到了该对象的等待池中
+>
+>   **唤醒线程**：可以说是将线程由等待池移动到锁池
+
+
+
 # 小结
 
 -   创建线程
@@ -1176,4 +1257,7 @@ class TaskQueue {
 -   死锁
     -   死锁是指两个线程持有不同的线程锁又同时试图获取对方的线程锁，导致无限等待的情况。
     -   为了避免死锁，要保证线程获取锁的顺序一致。
+-   多线程协调
+    -   `synchronized` 解决了对线程竞争的问题，而有些情况下，存在竞争关系的线程之间需要进行协调（例如任务管理），这时需要使用 `wait()` 和 `notifyAll()` 方法
+    -   `wait()` 和 `notifyAll()` 方法的作用机制可以通过锁池和等待池来理解
 
