--- a/Java-从0开始（基础）/21.多线程/多线程基础（2）.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础（2）.md
@@ -151,6 +151,133 @@ if (condition.await(1, TimeUnit.SECOND)) {
 }
 ```
 
+# 使用 ReadWriteLock
+
+但是有时希望实现：
+
+1.  只允许一个线程写入（其他线程禁止读写）
+2.  没有线程写入时，运行多个线程读
+
+可以通过 ReadWriteLock 实现。
+
+
+
+**ReadWriteLock 的使用流程**：
+
+1.  创建 `ReadWriteLock` 实例，然后分别获取读锁和写锁
+2.  对读方法加上读锁和释放读锁
+3.  对写方法加上写锁和释放写锁
+
+
+
+实例：
+
+```java
+class Counter {
+    private final ReadWriteLock rwlock = new ReentrantReadWriteLock();
+    private final Lock rlock = rwlock.readLock();
+    private final Lock wlock = rwlock.writeLock();
+    private int[] counts = new int[10];
+
+    public void inc(int index) {
+        wlock.lock(); // 加写锁
+        try {
+            counts[index] = index;
+        } finally {
+            wlock.unlock(); // 释放写锁
+        }
+    }
+
+    public void get() {
+        rlock.lock(); // 加读锁
+        try {
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                System.out.println(e);
+            }
+            System.out.println(Arrays.toString(counts)); // 返回数组的副本
+        } finally {
+            rlock.unlock(); // 释放读锁
+        }
+    }
+}
+```
+
+# 使用 StampedLock
+
+>   *? 本章的内容没有深入理解，将来回看*
+
+>   分析`ReadWriteLock`，会发现它有个潜在的问题：如果有线程正在读，写线程需要等待读线程释放锁后才能获取写锁，即读的过程中不允许写，这是一种**悲观的读锁**。
+>
+>   要进一步提升并发执行效率，Java 8引入了新的读写锁：`StampedLock`。
+>
+>   `StampedLock`和`ReadWriteLock`相比，改进之处在于：读的过程中也允许获取写锁后写入！这样一来，我们读的数据就可能不一致，所以，需要一点额外的代码来判断读的过程中是否有写入，这种读锁是一种**乐观的读锁**。
+>
+>   乐观锁：乐观地估计读的过程中大概率不会有写入
+>
+>   悲观锁：读的过程中拒绝有写入，也就是写入必须等待
+
+
+
+实例：
+
+```java
+public class Point {
+    private final StampedLock stampedLock = new StampedLock();
+
+    private double x;
+    private double y;
+
+    public void move(double deltaX, double deltaY) {
+        long stamp = stampedLock.writeLock(); // 获取写锁
+        try {
+            x += deltaX;
+            y += deltaY;
+        } finally {
+            stampedLock.unlockWrite(stamp); // 释放写锁
+        }
+    }
+
+    public double distanceFromOrigin() {
+        long stamp = stampedLock.tryOptimisticRead(); // 获得一个乐观读锁
+        // 注意下面两行代码不是原子操作
+        // 假设x,y = (100,200)
+        double currentX = x;
+        // 此处已读取到x=100，但x,y可能被写线程修改为(300,400)
+        double currentY = y;
+        // 此处已读取到y，如果没有写入，读取是正确的(100,200)
+        // 如果有写入，读取是错误的(100,400)
+        if (!stampedLock.validate(stamp)) { // 检查乐观读锁后是否有其他写锁发生
+            stamp = stampedLock.readLock(); // 获取一个悲观读锁
+            try {
+                currentX = x;
+                currentY = y;
+            } finally {
+                stampedLock.unlockRead(stamp); // 释放悲观读锁
+            }
+        }
+        return Math.sqrt(currentX * currentX + currentY * currentY);
+    }
+}
+```
+
+
+
+# 使用线程安全的集合（Concurrent集合）
+
+针对`List`、`Map`、`Set`、`Queue`、`Deque`等，`java.util.concurrent`包也提供了对应的并发集合类：
+
+| interface | non-thread-safe         | thread-safe                              |
+| :-------- | :---------------------- | :--------------------------------------- |
+| List      | ArrayList               | CopyOnWriteArrayList                     |
+| Map       | HashMap                 | ConcurrentHashMap                        |
+| Set       | HashSet / TreeSet       | CopyOnWriteArraySet                      |
+| Queue     | ArrayDeque / LinkedList | ArrayBlockingQueue / LinkedBlockingQueue |
+| Deque     | ArrayDeque / LinkedList | LinkedBlockingDeque                      |
+
+所有的同步和加锁的逻辑都在集合内部实现，对外部调用者来说，只需要正常按接口引用，其他代码和原来的非线程安全代码完全一样。
+
 # 小结
 
 1.  使用 ReentrantLock 和 Condition
@@ -163,5 +290,21 @@ if (condition.await(1, TimeUnit.SECOND)) {
     3.  Condition 提供 `await()` 和 `sinal()`/ `signalAll()` 方法可以实现线程的协调，这几个方法的使用类似 `wait()` 、`notify()`/ `notifyAll()` 方法
     4.  类似 `tryLock()`，等待指定时间后，如果还没有被其他线程通过`signal()`或`signalAll()`唤醒，线程可以自己醒来
 
+2.  使用 ReadWirteLock
+
+    1.  使用`ReadWriteLock`可以提高读取效率，适用于读取多，写入少的情况（如论坛的评论）
+    2.  ReadWriteLock 运行读并发，可以看成是对 ReentrantLock&Condition 的拓展
+
+3.  使用 StampedLock
+
+    1.  `StampedLock`提供了乐观读锁，可取代`ReadWriteLock`以进一步提升并发性能
+    2.  `StampedLock`是不可重入锁。
+
+4.  `java.util.concurrent` 包提供了线程安全的集合，使用方式与 `java.util.Collections` 包的集合一致。这有助于提高多线程编程效率。
+
     
+
+
+
+
 
