--- a/Java-从0开始（基础）/21.多线程/多线程基础（2）.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础（2）.md
@@ -278,6 +278,46 @@ public class Point {
 
 所有的同步和加锁的逻辑都在集合内部实现，对外部调用者来说，只需要正常按接口引用，其他代码和原来的非线程安全代码完全一样。
 
+# 使用concurrent包提供的原子操作
+
+>   *本节没有理解清楚*
+
+>   Java的`java.util.concurrent`包除了提供底层锁（Lock）、并发集合外，还提供了一组原子操作的封装类，它们位于`java.util.concurrent.atomic`包。
+
+以`AtomicInteger`为例，它提供的主要操作有：
+
+-   增加值并返回新值：`int addAndGet(int delta)`
+-   加1后返回新值：`int incrementAndGet()`
+-   获取当前值：`int get()`
+-   用CAS方式设置：`int compareAndSet(int expect, int update)`
+
+
+
+---
+
+Q：Atomic 类是如何实现线程安全的？
+
+A：**Atomic类是通过无锁（lock-free）的方式实现的线程安全（thread-safe）访问，具体原理是利用了 CAS（Compare and Set）**。
+
+如果使用CAS编写`incrementAndGet()`，代码会类似下面这样：
+
+```java
+public int incrementAndGet(AtomicInteger var) {
+    int prev, next;
+    do {
+        prev = var.get();
+        next = prev + 1;
+    } while ( ! var.compareAndSet(prev, next));
+    return next;
+}
+```
+
+
+
+
+
+
+
 # 小结
 
 1.  使用 ReentrantLock 和 Condition
@@ -301,6 +341,12 @@ public class Point {
     2.  `StampedLock`是不可重入锁。
 
 4.  `java.util.concurrent` 包提供了线程安全的集合，使用方式与 `java.util.Collections` 包的集合一致。这有助于提高多线程编程效率。
+
+5.  使用`java.util.concurrent.atomic`提供的原子操作可以简化多线程编程：
+
+    -   原子操作实现了无锁的线程安全；
+    -   适用于计数器，累加器等
+    -   此外，atomic的操作方法基于CAS原理实现，不需要锁，因此提高了效率
 
     
 
