--- a/Java-从0开始（基础）/21.多线程/多线程基础（3）.md
+++ b/Java-从0开始（基础）/21.多线程/多线程基础（3）.md
@@ -86,7 +86,7 @@ end task 4
     1.  有多种可供选择线程池（例如：ExecutorService es = Executors.newFixedThreadPool(4); // 创建一个固定大小的线程池）
 2.  启动任务（要先定义好任务类Task，需实现 `Runnable` 接口）
     1.  `ExecutorService.summit(Task)`
-3.  关闭线程池
+3.  关闭线程池（有三种方法）
     1.  `shutdown()`：等待正在执行的任务先完成，然后再关闭
     2.  `shutdownNow()`：立刻停止正在执行的任务
     3.  `awaitTermination()`：等待指定的时间让线程池关闭
@@ -168,6 +168,385 @@ ScheduledThreadPool 的使用流程：
 
 
 
+# Callable 接口与 Runnable 接口
+
+>   可执行代码见：thread-future
+
+Q：任务类如何返回值？
+
+A：前面的内容介绍到任务类继承 Runnable 接口后就可以交给线程池进行分配执行。但是实现 Runnable 接口的任务没有返回值。**如果需要返回值的话，可以让任务类实现 Callable 接口**。此时的代码写法如下：
+
+```java
+class Task implements Callable<String> {
+    public String call() throws Exception {
+        return longTimeCalculation(); 
+    }
+}
+```
+
+-    `call()` 方法中返回了一个 String 类型的值
+-   `Callable` 接口是一个泛型接口
+
+
+
+---
+
+Q：如何获取任务类的返回值（执行任务的结果）？
+
+A：`ExecutorService.submit()` 方法会返回一个 `Future` 类型的实例，它提供的 `get()` 方法可以获取任务的结果。
+
+
+
+**实例**：定义实现一个 `Callable` 接口的任务，然后通过 `Future` 实例获取任务的结果
+
+```java
+ExecutorService executor = Executors.newFixedThreadPool(4); 
+// 定义任务:
+Callable<String> task = new Task();
+// 提交任务并获得Future:
+Future<String> future = executor.submit(task);
+// 从Future获取异步执行返回的结果:
+String result = future.get(); // 可能阻塞
+```
+
+-   调用 `get()` 方法时，**如果异步任务还没有完成，那么`get()`会阻塞**，直到任务完成后才返回结果。
+
+
+
+---
+
+Q：`Future` 的常用方法？
+
+A：`Future` 是一个泛型接口，即 `Future<V>`，它表示一个未来可能会返回的结果，定义的方法有：
+
+-   `get()`：获取结果（可能会等待）
+-   `get(long timeout, TimeUnit unit)`：获取结果，但只等待指定的时间；
+-   `cancel(boolean mayInterruptIfRunning)`：取消当前任务；
+-   `isDone()`：判断任务是否已完成。
+
+
+
+# 使用 CompletableFuture
+
+>   使用`Future`获得异步执行结果时，要么调用阻塞方法`get()`，要么轮询看`isDone()`是否为`true`，这两种方法都不是很好，因为主线程也会被迫等待。
+
+>   从Java 8开始引入了`CompletableFuture`，它针对`Future`做了改进，可以传入回调对象，当异步任务完成或者发生异常时，自动调用回调对象的回调方法。
+
+这部分涉及到异步、回调、lambda 表达式等不熟悉的地方。回头再看。
+
+
+
+# 使用 ForkJoinPool 线程拆分执行任务
+
+>   Java 7开始引入了一种新的 ForkJoin 线程池，它可以执行一种特殊的任务：把一个大任务拆成多个小任务并行执行。
+
+**ForkJoin 的使用流程**：
+
+1.  定义 ForkJoin 任务（定义任务类）
+    1.  必须继承 RecursiveTask\<T\> 抽象类
+    2.  必须重写 `compute()` 方法
+    3.  在 `compute()` 方法中需要正确的划分执行任务
+        1.  定义一个阈值，决定何时进行划分。划分解决和不划分的解决的代码逻辑是不一样的。
+        2.  划分子任务：先在原始的 ForkJoin 任务中定义好两个 ForkJoin 类，然后再使用 `invokeAll(subtask1, subtask2);` 方法执行子任务。
+        3.  等待子任务完成，获取返回值：`subtask1.join();`
+        4.  合并子任务的返回结果：对于数组求和来说就是将子任务的返回结果再求和。
+        5.  返回整个任务的结果
+2.  创建线程池，执行 ForkJoin 任务
+    1.  `ForkJoinPool.commonPool()`：创建 ForkJoin 线程池
+    2.  `result = ForkJoinPool.invoke(task)`：执行 ForkJoin 任务，需要传入子定义的 ForkJoin 任务。获取到结果（由任务决定）
+
+
+
+
+
+**实例**：使用 ForkJoinPool 并行计算大数组的求和
+
+```java
+import java.util.Random;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.ForkJoinTask;
+import java.util.concurrent.RecursiveTask;
+
+public class App {
+    public static void main(String[] args) throws Exception {
+        // 创建2000个随机数组成的数组:
+        long[] array = new long[2000];
+        long expectedSum = 0;
+        // for循环：串行解决方法
+        for (int i = 0; i < array.length; i++) {
+            array[i] = random(); // 数组添加随机数元素
+            expectedSum += array[i];
+        }
+        System.out.println("Expected sum: " + expectedSum);
+
+        // fork/join: 并行解决方法
+        ForkJoinTask<Long> task = new SumTask(array, 0, array.length); // 创建ForkJoin任务
+
+        // 使用并行方法解决求和问题 并计算消耗的时间
+        long startTime = System.currentTimeMillis();
+        Long result = ForkJoinPool.commonPool().invoke(task); // 创建 ForkJoin线程池 调用invoke()方法并传入ForkJoin任务
+                                                              // 获得结果(类型由定义任务类的代码决定)
+        long endTime = System.currentTimeMillis();
+        System.out.println("Fork/join sum: " + result + " in " + (endTime - startTime) + " ms.");
+    }
+
+    static Random random = new Random(0); // 伪随机数生成器
+
+    static long random() { // 随机数生成静态函数（生成0~10000）之间的数
+        return random.nextInt(10000);
+    }
+}
+
+class SumTask extends RecursiveTask<Long> { // 定义ForkJoin任务类 必须继承RecursiveTask抽象类 且重写compute方法
+    static final int THRESHOLD = 500; // 任务量阈值 超过阈值则划分任务
+    long[] array;
+    int start;
+    int end;
+
+    SumTask(long[] array, int start, int end) {
+        this.array = array;
+        this.start = start;
+        this.end = end;
+    }
+
+    @Override
+    protected Long compute() { // ForkJoin的核心方法 
+        // 任务不大 直接执行
+        if (end - start <= THRESHOLD) {
+            // 如果任务足够小,直接计算:
+            long sum = 0;
+            for (int i = start; i < end; i++) {
+                sum += this.array[i];
+                // 故意放慢计算速度:
+                try {
+                    Thread.sleep(1);
+                } catch (InterruptedException e) {
+                }
+            }
+            return sum;
+        }
+        
+        // 任务太大 一分为二
+        int middle = (end + start) / 2;
+        System.out.println(String.format("split %d~%d ==> %d~%d, %d~%d", start, end, start, middle, middle, end));
+
+        // 定义两个子任务 然后分别执行
+        SumTask subtask1 = new SumTask(this.array, start, middle);
+        SumTask subtask2 = new SumTask(this.array, middle, end);
+        invokeAll(subtask1, subtask2); // 执行两个子任务
+        Long subresult1 = subtask1.join(); // 获取子任务1的结果
+        Long subresult2 = subtask2.join(); // 获取子任务2的结果
+        Long result = subresult1 + subresult2; // 合并子任务的结果
+        System.out.println("result = " + subresult1 + " + " + subresult2 + " ==> " + result);
+        
+        // 返回整个任务的结果
+        return result;
+    }
+}
+```
+
+
+
+# 使用 ThreadLocal
+
+Q：什么是上下文对象（context）？
+
+A：如下面的代码所示，在一个线程中，横跨若干方法调用，需要传递的对象，我们通常称之为上下文（Context），它是一种状态，可以是用户身份、任务信息等。
+
+```java
+void doWork(User user) {
+    queryStatus(user);
+    checkStatus();
+    setNewStatus(user);
+    log();
+}
+```
+
+
+
+---
+
+Q：给每个方法增加一个context参数非常麻烦；而且有时调用链有无法修改源码的第三方库，`User`对象就传不进去。怎么办？
+
+A：可以使用 Java 提供的 ThreadLocal
+
+
+
+---
+
+Q：ThreadLocal 的使用方法：分为两部分讲解
+
+1.  主体部分（调用方）
+
+    ```java
+    // 程序框架：try(source){...} 语句
+    try (var ctx = new UserContext(this.username)) { // 打开上下文对象，这里是UserContext
+    	new Task1().process(); // 执行一些方法，会用到上下文对象
+    	new Task2().process();
+    	new Task3().process();
+    } // 关闭上下文对象
+    ```
+
+2.  使用 ThreadLocal 定义上下文对象（被调方）
+
+    1.  定义一个具体的上下文对象，必须实现 AutoCloseable 接口
+    2.  使用 `ThreadLocal<T>` 静态变量保存一个上下文对象中的状态/值
+    3.  在构造方法中调用 `set()` 方法保存上下文对象的状态/值
+    4.  另外定义一个方法返回保存了的上下文对象的状态/值
+    5.  重写 `close()` 方法
+
+    ```java
+    class UserContext implements AutoCloseable { 
+    	private static final ThreadLocal<String> userThreadLocal = new ThreadLocal<>(); // ThreadLocal静态字段
+    
+    	public UserContext(String name) { // 
+    		userThreadLocal.set(name); 
+    	}
+    
+    	public static String getCurrentUser() {
+    		return userThreadLocal.get(); //
+    	}
+    
+    	@Override
+    	public void close() { //
+    		userThreadLocal.remove(); 
+    	}
+    }
+    ```
+
+3.  在线程中要调用上下文对象的方法，类似下面这样
+
+    ```java
+    class Task1 {
+    	public void process() { // 检查用户名
+    		try {
+    			Thread.sleep(100);
+    		} catch (InterruptedException e) {
+    		}
+    		System.out.printf("[%s] check user %s...\n", Thread.currentThread().getName(), UserContext.getCurrentUser()); // 使用上下文对象
+    	}
+    }
+    ```
+
+    
+
+
+
+**实例：**模拟多线程进行多个用户注册注销的过程
+
+```java
+package com.itranswarp.learnjava;
+
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+
+/**
+ * Learn Java from https://www.liaoxuefeng.com/
+ * 
+ * @author liaoxuefeng
+ */
+public class Main {
+	public static void main(String[] args) throws Exception {
+		ExecutorService es = Executors.newFixedThreadPool(3); // 创建包含3个线程的线程池
+		String[] users = new String[] { "Bob", "Alice", "Tim", "Mike", "Lily", "Jack", "Bush" };
+		for (String user : users) {
+			es.submit(new Task(user)); // 启动任务
+		}
+		es.awaitTermination(3, TimeUnit.SECONDS);
+		es.shutdown();
+	}
+}
+
+class UserContext implements AutoCloseable { // 实现AutoCloseable接口后再使用 `try (resource) {...}` 时编译器可以自动关闭ThreadLocal
+	private static final ThreadLocal<String> userThreadLocal = new ThreadLocal<>(); // ThreadLocal静态字段
+
+	public UserContext(String name) {
+		userThreadLocal.set(name); //
+		System.out.printf("[%s] init user %s...\n", Thread.currentThread().getName(), UserContext.getCurrentUser());
+	}
+
+	public static String getCurrentUser() {
+		return userThreadLocal.get(); //
+	}
+
+	@Override
+	public void close() {
+		System.out.printf("[%s] cleanup for user %s...\n", Thread.currentThread().getName(),
+				UserContext.getCurrentUser());
+		userThreadLocal.remove(); // 必须关闭 因为当前线程执行完相关代码后，很可能会被重新放入线程池中，如果ThreadLocal没有被清除，该线程执行其他代码时，会把上一次的状态带进去。
+	}
+}
+
+class Task implements Runnable { // 任务，主要这几件事：1.创建用户上下文对象（接受用户名为参数） 2.调用三个子任务的处理方法
+
+	final String username;
+
+	public Task(String username) {
+		this.username = username;
+	}
+
+	@Override
+	public void run() {
+		// 核心部分！！！
+		try (var ctx = new UserContext(this.username)) { // 打开上下文对象
+			new Task1().process(); // 一些方法，会用到上下文对象
+			new Task2().process();
+			new Task3().process();
+		} // 编译器自动关闭上下文对象
+	}
+}
+
+class Task1 {
+	public void process() { // 检查用户名
+		try {
+			Thread.sleep(100);
+		} catch (InterruptedException e) {
+		}
+		System.out.printf("[%s] check user %s...\n", Thread.currentThread().getName(), UserContext.getCurrentUser());
+	}
+}
+
+class Task2 {
+	public void process() { // 注册用户
+		try {
+			Thread.sleep(100);
+		} catch (InterruptedException e) {
+		}
+		System.out.printf("[%s] %s registered ok.\n", Thread.currentThread().getName(), UserContext.getCurrentUser());
+	}
+}
+
+class Task3 {
+	public void process() { // 提示与当前用户有关的任务完成
+		try {
+			Thread.sleep(100);
+		} catch (InterruptedException e) {
+		}
+		System.out.printf("[%s] work of %s has done.\n", Thread.currentThread().getName(),
+				UserContext.getCurrentUser());
+	}
+}
+```
+
+
+
+---
+
+Q：ThreadLocal 的本质
+
+A：实际上，可以把`ThreadLocal`看成一个全局`Map<Thread, Object>`：每个线程获取`ThreadLocal`变量时，总是使用`Thread`自身作为key：
+
+```java
+Object threadLocalValue = threadLocalMap.get(Thread.currentThread()); // Thread.currentThread()方法可以获得当前线程的名字
+```
+
+因此，`ThreadLocal`相当于给每个线程都开辟了一个独立的存储空间，各个线程的`ThreadLocal`关联的实例互不干扰。
+
+
+
+
+
 # 小结
 
 1.  线程池
@@ -178,4 +557,13 @@ ScheduledThreadPool 的使用流程：
         2.  执行任务（要定义好任务类，需要实现 `Runnable` 接口）
         3.  关闭线程池
     4.  ScheduledThreadPool 是一种比较特别的线程池，主要用于执行周期性任务。
+2.  Callable 接口和 Runnable 接口
+    1.  任务是否能返回由实现的接口类型决定（实现 Callable\<T\> 接口的可以返回值，而实现 Runnable 不可以）
+    2.  `Future<V>` 是一个泛型接口，它的 `get()` 方法可以获取 `Callable` 任务的返回结果
+3.  Fork/Join模式基于分治法，它可以让多个线程分别解决任务的一部分，最后组合得到整个任务的结果。使用时需要创建 ForkJoin 线程池 和自定义 ForkJoin 任务。
+4.  使用 ThreadLocal
+    1.  `ThreadLocal`表示线程的“局部变量”，它确保每个线程的`ThreadLocal`变量都是各自独立的
+    2.  `ThreadLocal`适合在一个线程的处理流程中保持上下文（避免了同一参数在所有方法中传递）
+
+
 
